--- a/src/app/components/about-me/about-me.component.html
+++ b/src/app/components/about-me/about-me.component.html
@@ -3,16 +3,11 @@
     <div class="col">
       <div class="paragraph">
       <p class="display-1 title">ABOUT ME</p>
-        <b
-          style="
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-              'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-          "
-          >hey :D, i'm Cristian Garzon - BackEnd developer</b
+        <b class="description">hey :D, i'm Cristian Garzon - BackEnd developer</b
         >
         <br />
-        <p>
-          2 years of experience in creating projects with java, 1 year 
+        <p class="description">
+          3 years of experience in creating projects with java, 1 year 
           creating REST API with spring boot framework, intermediate level in
           spring boot, intermediate level in microservice architecture with
           spring cloud in netflix eureka. In my spare time I do competitive
